# one-message-cli

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  om_cli.cpp  om_cli.hpp
CMake/: findcheck.sh
